--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "browser-sync": "^2.13.0",
-    "gulp": "^3.9.1"
+    "gulp": "^3.9.1",
+    "lodash": "^4.17.4"
   }
 }
